--- a/templates/patients/_identifier_modals.html
+++ b/templates/patients/_identifier_modals.html
@@ -34,8 +34,7 @@
                 <h5 class="modal-title">Edit Identifier</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
-            <form method="POST" action="{{ url_for('patients.edit_identifier', id=patient.id) }}">
-                <input type="hidden" id="edit_identifier_id" name="identifier_id">
+            <form method="POST" action="{{ url_for('patients.edit_identifier', id=patient.id, identifier_id=0) }}" id="editIdentifierForm">
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="edit_identifier_type" class="form-label">Type</label>
